# pacote-python-tb

./: .readthedocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: .readthedocs.yaml  conf.py  index.md  index.rst
docs/templates/: instalacao.md
pacote_python_tb/: acordes.py  cli.py  escalas.py  pentatonica.py
tests/: test_acordes.py  test_campo_harmonico.py  test_cli.py  test_escalas.py
