[tool.poetry]
name = "pacote-python-tb"
version = "0.1.0"
description = ""
authors = ["Fernando Pacheco <fernandopachecopx@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
notas-musicais = "pacote_python_tb.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.13.0"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.44"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=pacote_python_tb -vv"
post_test = "coverage html"